[package]
name = "set-balance"
version = "0.1.0"
edition = "2021"

[dependencies]
log = { version = "0.4.20", default-features = false }
subxt = "0.34.0"
subxt-signer = "0.34.0"
tokio = { version = "1.36", features = ["macros", "time", "rt-multi-thread"] }

[features]
paseo = []

[[bin]]
name = "set-balance"
path = "src/main.rs"
